...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="h0S-XN-xYt" id="hxz-Zk-PjA"/>
                            <outlet property="delegate" destination="h0S-XN-xYt" id="8Q5-mw-yDb"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="User list" id="VX2-qh-faI">
                        <barButtonItem key="rightBarButtonItem" title="Next page" id="bKX-m3-h4H">
                            <connections>
                                <action selector="loadMore:" destination="h0S-XN-xYt" id="zvH-WD-Lnc"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="E1W-Oz-D8v" id="47Q-l3-y0p"/>
                            <outlet property="delegate" destination="E1W-Oz-D8v" id="B8U-wY-M9T"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="User details" id="yJo-mG-Mrz"/>
                    <size key="freeformSize" width="414" height="1200"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ZH2-rz-dbX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1586.9565217391305" y="126.5625"/>
        </scene>
...
